# HarmonySeeker-app

./: .gitignore  README.md  docker-compose.yml  sample.env
.github/workflows/: pull_request_check.yaml
service-platform/: Dockerfile  README.md  build_api.sh  lambda_function.py  main.py  pyproject.toml  requirements.txt  sample.env
service-platform/config/: setting.py
service-platform/routers/: __init__.py  songchord.py  voiceseparator.py
service-platform/tests/: test_songchord_recognizer.py  test_voice_separator.py
web-platform/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web-platform/src/: App.vue  main.js  router.js
web-platform/src/components/Menu/: index.vue
web-platform/src/components/Toast/: index.vue
web-platform/src/components/WaveformPlayer/: index.vue
web-platform/src/pages/Home/: index.vue
web-platform/src/pages/Introduction/: index.vue
web-platform/src/pages/SongChord/: index.vue
web-platform/src/pages/VoiceSeparator/: index.vue
web-platform/src/plugins/: axios.js  vuetify.js
web-platform/src/utils/: toast.js
