[project]
name = "HarmonySeeker"
version = "0.1.0"
description = "Harmony Seeker web app"
authors = [
    {name = "Harmony Seeker",email = "HarmonySeeker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
