[project]
name = "harmony-seeker-service"
version = "0.1.0"
description = "HarmonySeeker Service Platform"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2,<0.110.0",
    "uvicorn>=0.27.1,<0.28.0",
    "python-multipart>=0.0.9,<0.1.0",
    "httpx>=0.26.0,<0.27.0",
    "soundfile>=0.12.1,<0.13.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "gunicorn>=21.2.0,<22.0.0"
]

[tool.poetry]
name = "harmony-seeker-service"
version = "0.1.0"
description = "HarmonySeeker Service Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
httpx = "^0.26.0"
soundfile = "^0.12.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
