[project]
name = "harmony-seeker-service"
version = "0.1.0"
description = "HarmonySeeker Service Platform"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-multipart>=0.0.9,<0.1.0",
    "httpx>=0.26.0,<0.27.0",
    "soundfile>=0.12.1,<0.13.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "mangum (>=0.19.0,<0.20.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
